# Adapters

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  drop.h  dropIter.h  filter.h  filterIter.h  keys.h  position.h  positionIter.h  requirements.h  reverse.h  reverseIter.h  take.h  takeIter.h  transform.h  transformIter.h  values.h
test/: CMakeLists.txt  tests.cpp
